# drfproject

./: README.md  pyproject.toml
src/backend/api/: serializers.py  urls.py  views.py
src/backend/blog/: admin.py  models.py  urls.py  views.py
src/backend/blog/migrations/: 0001_initial.py  0002_alter_article_thumb.py  0003_remove_article_date.py  0004_alter_article_slug.py
src/backend/blog/templates/blog/: article_list.html
src/backend/core/: settings.py  urls.py
