[project]
name = "drfproject"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "mostafa2k", email = "m2kappswindows8.1@gmail.com"},
]
dependencies = [
    "django>=5.1.1",
    "djangorestframework>=3.15.2",
    "markdown>=3.7",
    "django-cors-headers>=4.6.0",
    "Faker>=33.0.0",
    "factory-boy>=3.3.1",
    "requests>=2.32.3",
    "pillow>=11.1.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
